Tries to fix not wrapping of inline code

--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -76,6 +76,7 @@ img {
       font-size: var(--font-size-16);
       line-height: 1;
       overflow: auto;
+      overflow-wrap: break-word;
       padding-block: var(--size-3);
       padding-inline: var(--size-5);
       text-wrap: wrap;
